syntax="proto3";

package mu;

// Sent as response in LocationUpdateReply

import "model.Coordinate.proto";
import "model.UserProfile.proto";

message MapElement {
	mu.Coordinate location = 1;
	mu.UserProfile user = 2;
}

// vim: noet:ts=2
